--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Activitat 2</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello World modificat al repositori A</h1>
 </body>
 </html>
