--- a/alumne.html
+++ b/alumne.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activitat 2</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hello World modificat al repositori B</h1>
-    <a href="alumne.html">Enllaç a alumne</a>
+    <h1 style="color: red; text-decoration: underline;">Ilie Schiopu</h1>
+    
 </body>
 </html>
